--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="container">
         <div class="header">
             <div class="nav-bar">
-                <img src="./assets/images/LOGO.svg" alt="dev-kev-logo">
+                <div class="header-logo">
+                    <img src="./assets/images/LOGO.svg" alt="dev-kev-logo">
+                </div>
                 <nav>
                     <ul>
                         <li>Tools</li>
