styled hero section

--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
             </div>
             <div class="header-banner">
                 <div class="header-content">
-                    <p>Hi, my name is</p>
+                    <p class="intro">Hi, my name is</p>
                     <p class="name">Kelvin Gitahi.</p>
                     <p class="title-description">I build things for the web.</p>
-                    <p class="description">I am a Nairobi based software engineer who specializes in building and designing exceptional digital experiences.<br> I recently joined Moringa School to cement my skills and build connections</p>
+                    <div class="description"><p>I am a Nairobi based software engineer who specializes in building and designing exceptional digital experiences. I recently joined Moringa School to cement my skills and build connections</p>
+                    </div>
                 </div>
-                <div class="header-banner-img">
-                    <img src="./assets/images/IMG_20191204_105239 1.svg" alt="dev-kev-avatar">
-                </div>
+                <div class="header-banner-img"></div>
             </div>
             <div class="header-cta">
                 <a href="mailto:kgitahi@zohomail.com">GET IN TOUCH</a>
