--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <div class="technologies">
             <p>TOOLS & TECHNOLOGIES</p>
             <div class="tech-imgs">
-                <img src="./assets/images/Visual Studio Code.svg" alt="vs-code">
-                <img src="./assets/images/HTML5_logo_and_wordmark.svg" alt="html5">
-                <img src="./assets/images/js.svg" alt="javascript">
-                <img src="./assets/images/CSS3_logo_and_wordmark.svg" alt="css3">
-                <img src="./assets/images/GitHub-Mark/PNG/GitHub-Mark-120px-plus.png" alt="github">
+                <img id="vs-code" src="./assets/images/Visual Studio Code.svg" alt="vs-code">
+                <img id="html5" src="./assets/images/HTML5_logo_and_wordmark.svg" alt="html5">
+                <img id="javascript" src="./assets/images/js.svg" alt="javascript">
+                <img id="css3" src="./assets/images/CSS3_logo_and_wordmark.svg" alt="css3">
+                <img id="github" src="./assets/images/GitHub-Mark/PNG/GitHub-Mark-120px-plus.png" alt="github">
             </div>
         </div>
         <hr>
