styled project cards

--- a/index.html
+++ b/index.html
@@ -50,28 +50,29 @@
         </div>
         <hr>
         <div class="projects">
+            <p class="technologies">PROJECTS</p>
             <div class="card">
                 <div class="card-left">
                     <div class="project-logo">
                         <img src="./assets/images/Keja-logo.svg" alt="keja-chap-chap">
                     </div>
                     <div class="project-description">
-                        <p>KEJA CHAP CHAP</p>
-                        <p>A platform that lists houses for rent and for buying so that users don't have to leave their comfort zone looking for them</p>
+                        <p class="card-title">KEJA CHAP CHAP</p>
+                        <p class="card-content">A platform that lists houses for rent and for buying so that users don't have to leave their comfort zone looking for them</p>
                         <div class="btn-card-left">
                             <a href="https://kwathuta.github.io/Keja-Chap-Chap/">VISIT WEBSITE</a>
                         </div>
-                        <p>HTML CSS JS</p>
+                        <p class="code-lang">HTML CSS JS</p>
                     </div>
                 </div>
                 <div class="card-right">
                     <div class="project-description">
-                        <p>ANITA'S KITCHEN</p>
-                        <p>Anita's Kitchen is an established restaurant serving an exquisite variety of fast-foods and drinks</p>
+                        <p class="card-title">ANITA'S KITCHEN</p>
+                        <p class="card-content">Anita's Kitchen is an established restaurant serving an exquisite variety of fast-foods and drinks</p>
                         <div class="btn-card-right">
                             <a href="https://kwathuta.github.io/Anitas-Kitchen/">VISIT WEBSITE</a>
                         </div>
-                        <p>HTML CSS</p>
+                        <p class="code-lang left">HTML CSS</p>
                     </div>
                     <div class="project-logo">
                         <img src="./assets/images/logoBig.png" alt="anitas-logo">
@@ -82,12 +83,12 @@
                         <img src="./assets/images/mksnow 1.svg" alt="mksnow-logo">
                     </div>
                     <div class="project-description">
-                        <p>MK SNOW TOURS AND TRAVELS</p>
-                        <p>An experienced and established tour operator specializing within and around East Africa. Based in Naro Moru at the base of Mt. Kenya</p>
+                        <p class="card-title">MK SNOW TOURS AND TRAVELS</p>
+                        <p class="card-content">An experienced and established tour operator specializing within and around East Africa. Based in Naro Moru at the base of Mt. Kenya</p>
                         <div class="btn-card-left">
                             <a href="https://www.mksnowtours.co.ke/">VISIT WEBSITE</a>
                         </div>
-                        <p>HTML WORDPRESS</p>
+                        <p class="code-lang">HTML WORDPRESS</p>
                     </div>
                 </div>
             </div>
