styled about-me section

--- a/index.html
+++ b/index.html
@@ -95,11 +95,13 @@
         </div>
         <div class="about-me">
             <p class="about-header">Get to Know Me!</p>
-            <div class="bg-info">
-                <p>I have worked with multiple clientsin the corporate network infrastructure field and recently joined a coding school to strengthen my programming skills</p>
-            </div>
-            <div class="interests">
-                <p>I enjoy networking especially in the tech community. I love everything about code and problem solving through it</p>
+            <div class="about-content">
+                <div class="bg-info">
+                    <p>I have worked with multiple clients in the corporate network infrastructure field and recently joined a coding school to strengthen my programming skills</p>
+                </div>
+                <div class="interests">
+                    <p>I enjoy networking especially in the tech community. I love everything about code and problem solving through it</p>
+                </div>
             </div>
             <div class="social-icons">
                 <a href="https://twitter.com/kevocb" target="_blank"><img src="./assets/images/twitter.svg" alt="twitter"></a>
