styled footer and copyright

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
         </div>
         <footer>
             <div class="contact">
-                <p>Work With Me</p>
-                <p>I'm currently available for work</p>
+                <p class="contact-header">Work With Me</p>
+                <p class="contact-content">I'm currently available for work</p>
                 <div class="btn-link">
                     <a href="mailto:kgitahi@zohomail.com">START NOW</a>
                 </div>
             </div>
-            <p>Copyright &#169; 2021 | Kelvin Gitahi&#8482;</p>
+            <p class="copyright">Copyright &#169; 2021 | Kelvin Gitahi&#8482;</p>
         </footer>
     </div>
 </body>
