added resume link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                         <li>Tools</li>
                         <li>Projects</li>
                         <li>About</li>
-                        <button>Resume</button>
+                        <div class="header-cta-resume">
+                            <a href="https://drive.google.com/file/d/11otgEFtimoySzVKuLK9mCfxP1vhOBs7W/view?usp=sharing" target="_blank">Resume</a>
+                        </div>
                     </ul>
                 </nav>
             </div>
@@ -60,7 +62,7 @@
                         <p class="card-title">KEJA CHAP CHAP</p>
                         <p class="card-content">A platform that lists houses for rent and for buying so that users don't have to leave their comfort zone looking for them</p>
                         <div class="btn-card-left">
-                            <a href="https://kwathuta.github.io/Keja-Chap-Chap/">VISIT WEBSITE</a>
+                            <a href="https://kwathuta.github.io/Keja-Chap-Chap/" target="_blank">VISIT WEBSITE</a>
                         </div>
                         <p class="code-lang">HTML CSS JS</p>
                     </div>
@@ -70,7 +72,7 @@
                         <p class="card-title">ANITA'S KITCHEN</p>
                         <p class="card-content">Anita's Kitchen is an established restaurant serving an exquisite variety of fast-foods and drinks</p>
                         <div class="btn-card-right">
-                            <a href="https://kwathuta.github.io/Anitas-Kitchen/">VISIT WEBSITE</a>
+                            <a href="https://kwathuta.github.io/Anitas-Kitchen/" target="_blank">VISIT WEBSITE</a>
                         </div>
                         <p class="code-lang left">HTML CSS</p>
                     </div>
@@ -86,7 +88,7 @@
                         <p class="card-title">MK SNOW TOURS AND TRAVELS</p>
                         <p class="card-content">An experienced and established tour operator specializing within and around East Africa. Based in Naro Moru at the base of Mt. Kenya</p>
                         <div class="btn-card-left">
-                            <a href="https://www.mksnowtours.co.ke/">VISIT WEBSITE</a>
+                            <a href="https://www.mksnowtours.co.ke/" target="_blank">VISIT WEBSITE</a>
                         </div>
                         <p class="code-lang">HTML WORDPRESS</p>
                     </div>
