added transitions to buttons and links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li>Tools</li>
+                        <a href="#t&t"><li>Tools</li></a>
                         <li>Projects</li>
                         <li>About</li>
                         <div class="header-cta-resume">
@@ -36,6 +36,7 @@
                 </div>
                 <div class="header-banner-img"></div>
             </div>
+            <a name="t&t"></a>
             <div class="header-cta">
                 <a href="mailto:kgitahi@zohomail.com">GET IN TOUCH</a>
             </div>
