added links to nav components

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <div class="header">
             <div class="nav-bar">
                 <div class="header-logo">
-                    <img src="./assets/images/LOGO.svg" alt="dev-kev-logo">
+                    <a href="#"><img src="./assets/images/LOGO.svg" alt="dev-kev-logo"></a>
                 </div>
                 <nav>
                     <ul>
                         <a href="#t&t"><li>Tools</li></a>
-                        <li>Projects</li>
-                        <li>About</li>
+                        <a href="#work"><li>Projects</li></a>
+                        <a href="#get-to-know-me"><li>About</li></a>
                         <div class="header-cta-resume">
                             <a href="https://drive.google.com/file/d/11otgEFtimoySzVKuLK9mCfxP1vhOBs7W/view?usp=sharing" target="_blank">Resume</a>
                         </div>
@@ -50,6 +50,7 @@
                 <img id="css3" src="./assets/images/CSS3_logo_and_wordmark.svg" alt="css3">
                 <img id="github" src="./assets/images/GitHub-Mark/PNG/GitHub-Mark-120px-plus.png" alt="github">
             </div>
+            <a name="work"></a>
         </div>
         <hr>
         <div class="projects">
@@ -94,6 +95,7 @@
                         <p class="code-lang">HTML WORDPRESS</p>
                     </div>
                 </div>
+                <a name="get-to-know-me"></a>
             </div>
         </div>
         <div class="about-me">
